# whitescape

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: publish_web_app.yml
src/: ast.rs  lexer.rs  lib.rs  main.rs  transpiler.rs  util.rs
src/specs/whitespace/: mod.rs  utils.rs
src/transpiler/: emitter.rs  mod.rs  state.rs
src/transpiler/built_in/: IO.rs  String.rs  bi_io.rs  bi_string.rs  mod.rs
src/transpiler/tests/: mod.rs
web-app/: .gitignore  .prettierrc.json  package.json  tsconfig.json  webpack.config.js
web-app/src/: index.html  index.tsx  style.css
