[package]
name = "whitespace_to_whitespace_interpreter"
version = "0.1.0"
author = ["github.com/aramikuto"]
description = "This transpiler is designed to convert custom high-level code into Whitespace programming language."
license = "MIT"
repository = "https://github.com/aramikuto/whitescape"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"

[dependencies]
wasm-bindgen = "0.2"